fixing missing files
