# api/v1alpha1/edgedevice_types.go
@@ -39,6 +39,9 @@ type EdgeDeviceSpec struct {
 	Metrics       *MetricsConfiguration           `json:"metrics,omitempty"`
 	LogCollection map[string]*LogCollectionConfig `json:"logCollection,omitempty"`
 	Mounts        []*Mount                        `json:"mounts,omitempty"`
+
+	// list of all wireless devices found on edgedevice
+	WirelessDevices []*WirelessDevices `json:"wirelessDevices,omitempty"`
 }
 
 type MetricsReceiverConfiguration struct {
@@ -425,6 +428,23 @@ type Mount struct {
 
 	// Mount options (i.e. rw, suid, dev)
 	Options string `json:"options,omitempty"`
+}
+
+//new component
+type WirelessDevices struct {
+	Name         string `json:"name"`
+	Manufacturer string `json:"manufacturer,omitempty"`
+	Model        string `json:"model,omitempty"`
+	SWVersion    string `json:"swVersion,omitempty"`
+	Identifiers  string `json:"identifiers"`
+	Protocol     string `json:"protocol,omitempty"`
+	Connection   string `json:"connection,omitempty"`
+	Battery      string `json:"battery,omitempty"`
+	DeviceType   string `json:"deviceType,omitempty"`
+	Availability string `json:"availability,omitempty"`
+	Readings     string `json:"readings,omitempty"`
+	State        string `json:"state,omitempty"`
+	LastSeen     string `json:"lastSeen,omitempty"`
 }
 
 //+kubebuilder:object:root=true
